@@ -1,5 +1,6 @@
 
 5.1b1 -> 5.2b1
+    - proyvind: move some macros that's identical for each platform macros to standard macros
     - rse: use latest POPT 1.14 for building with "devtool standalone"
     - rse: prepared build-tree for RPM 5.2 development after branching
 
